Practica segundo parcial

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "files.associations": {
         "stdio.h": "c",
         "stdlib.h": "c",
-        "ilinkedlist.h": "c"
+        "ilinkedlist.h": "c",
+        "notaalumno.h": "c"
     }
 }
